--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,4 +20,8 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        run:  mvn -batch-mode --update-snapshots verify
+        run: mvn -B clean package -Dmaven.test.skip.exec
+      - name: Unit Test
+        run: mvn '-Dtest=com.example.githubactionmavenbuild.Test.*Test' test
+      - name: Integration Test
+        run: mvn '-Dtest=com.example.githubactionmavenbuild.IT.*Test' test
