--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean package -Dmaven.test.skip.exec
       - name: Unit Test
-        run: mvn '-Dtest=com.example.githubactionmavenbuild.Test.*Test' test
+        run: mvn '-Dtest=com.example.githubactionmavenbuild.Test.*Test*' test
       - name: Integration Test
-        run: mvn '-Dtest=com.example.githubactionmavenbuild.IT.*Test' test
+        run: mvn '-Dtest=com.example.githubactionmavenbuild.IT.*Test*' test
